--- a/_posts/2016-03-01-一些问题.markdown
+++ b/_posts/2016-03-01-一些问题.markdown
@@ -1,4 +1,15 @@
-## 一些问题
+---
+layout:     post
+title:      "一些问题"
+subtitle:   "一些问题"
+date:       2016-03-01
+author:     "未久夕多"
+header-img: "img/home-bg-o.jpg"
+tags:
+    - 一些问题
+---
+
+### 一些问题
 
 1. 字符串反转
 [http://www.cnblogs.com/pianoid/archive/2011/10/30/string_reverse_in_c_language.html](http://www.cnblogs.com/pianoid/archive/2011/10/30/string_reverse_in_c_language.html)
