--- a/_posts/2016-02-18-还是这个面试题靠谱~.markdown
+++ b/_posts/2016-02-18-还是这个面试题靠谱~.markdown
@@ -8,6 +8,8 @@ header-img: "img/home-bg-o.jpg"
 tags:
     - sunny
     - 程序犭袁
+    - 面试题
+    - iOS
 ---
 
 > 常见的面试题整理，也是为了自己能够反复复习相关知识点，更加注重基础知识。更方便自己找到更好的工作。
