--- a/_posts/2016-03-15-多线程.markdown
+++ b/_posts/2016-03-15-多线程.markdown
@@ -6,11 +6,8 @@ date:       2016-03-15
 author:     "未久夕多"
 header-img: "img/home-bg-o.jpg"
 tags:
-    - NSThread 
-    - GCD
-    - NSOpreation
-    - 串行
-    - 并行
+	- 多线程
+	- iOS
 ---
 
 > 多线程的相关知识
