--- a/_posts/2016-03-15-GCD.markdown
+++ b/_posts/2016-03-15-GCD.markdown
@@ -12,18 +12,18 @@ tags:
 
 > GCD相关问题整理
 
-## GCD
+### GCD
 
-### 各种队列
+#### 各种队列
 
-### 线程间通信
+#### 线程间通信
 
-### 常用队列 - 主队列  全局并发队列
+#### 常用队列 - 主队列  全局并发队列
 
-### group
+#### group
 
-### apply
+#### apply
 
-### once
+#### once
 
-### 单例实现
+#### 单例实现
