--- a/_posts/2016-12-4-emacs.md
+++ b/_posts/2016-12-4-emacs.md
@@ -19,3 +19,5 @@ tags:
 
 ### 参考
 * [Mac下Emacs的使用](http://wiki.manan.org/tools/mac_emacs.html)
+* [从零开始——Emacs 安装配置使用教程 2015](http://www.jianshu.com/p/b4cf683c25f3)
+* [一年成为Emacs高手(像神一样使用编辑器)](https://github.com/redguardtoo/mastering-emacs-in-one-year-guide/blob/master/guide-zh.org)
