--- a/_posts/2016-12-4-iterm学习使用.md
+++ b/_posts/2016-12-4-iterm学习使用.md
@@ -14,5 +14,5 @@ tags:
 ##Iterm
 ### 安装
 * [官网](http://iterm2.com/)
-* [设置着玩](http://www.jianshu.com/p/7de00c73a2bb)
+* [iTerm 2 && Oh My Zsh【DIY教程——亲身体验过程】](http://www.jianshu.com/p/7de00c73a2bb)
 * [快捷键](http://blog.csdn.net/hitwhylz/article/details/18926149)
