emacs更新。push证书的一些问题

--- a/_posts/2016-12-4-emacs.md
+++ b/_posts/2016-12-4-emacs.md
@@ -15,6 +15,42 @@ tags:
 ### 安装
 * mac下自带旧版本的emacs
 
+### 快捷键及命令
+* C 代表Ctrl  M代表Alt
+* 退出`C-x C-c`
+* 恢复.emacs文件 `mv -/.emacs ~/.emacs.old`
+* 设置字体 `emacs --font "DejaVu Sans Mono 14"`
+* 基础设置 `Emacs Tutorial`
+* 将光标放到超链接上点击回车就可以进入
+* 所有的帮助文档要先按 `C-h` 例如 `C-h i`打开info目录
+* `u`返回上一页
+* `M-x` 进入命令模式，并可以进行命令提示
+* 推出命令模式 `C-g`
+* 回到刚才看的一页`i`
+* 查找`C-s`,例如`C-s games`
+* `Tab`可以进行命令提示
+* `M-x kill`可以提示怎么关闭。。。
+* 推出buffer `C-x k`
+* 切换buffer `C-x b`
+* mod 帮助`C-h m`
+* 切换窗口 `C-x o`
+* `C-a`
+* `C-e`
+* 只展示当前窗口`C-x 1`
+* 查看教程`C-h t`
+
+##### 设置
+* 去掉menu Bar:`M-x customize`->`environment`->`Frames`->`Menu Bar Mode`->`Toggle off`->`State`->1
+* 去掉Tool Bar: `Frames`->`Tool Bar Mode`->`Toggle off`->`State`->1
+* 进入.emacs文件查看修改。`C-x C-f`进入`Find file:` 输入`~/.emacs`
+
+#### Faces
+* Default
+* search `theme`
+* `M-x` `customize-themes`
+* 注意foreground background 可能会遮挡主题颜色
+* 
+
 
 
 ### 参考
@@ -22,3 +58,10 @@ tags:
 * [从零开始——Emacs 安装配置使用教程 2015](http://www.jianshu.com/p/b4cf683c25f3)
 * [一年成为Emacs高手(像神一样使用编辑器)](https://github.com/redguardtoo/mastering-emacs-in-one-year-guide/blob/master/guide-zh.org)
 * [快捷键](http://aifreedom.com/technology/112)
+* [Emacs视频教学](http://www.bilibili.com/video/av1137419/index_1.html)
+* [初学者](http://emacser.com/to-emacs-beginner.htm)
+* [学习Emacs系列教程（一）：基本使用](http://www.cnblogs.com/robertzml/archive/2009/09/10/1564108.html)
+* [学习Emacs系列教程（二）：导航](http://www.cnblogs.com/robertzml/archive/2009/09/14/1566435.html)
+* [基础知识](http://www.ibm.com/developerworks/cn/education/aix/emacs1/)
+* [程序员小助手 | Emacs，最强编辑器，没有之一](http://www.jianshu.com/p/732157b02ecc?utm_campaign=hugo&utm_medium=reader_share&utm_content=note)
+* [使用Emacs编辑markdown文件](http://www.bjt.name/2013/09/emacs-configure)
